# Tractor

./: .gitignore  README.md
controllers/tractor_driver/: active_inference.py  memories.py  pdi.py  tester.py  track.py  tractor_driver.py  utils.py  visualizer.py
protos/: Astra.proto  Husky.proto  Oak.proto  Pioneer2.proto
protos/husky2/: husky2.mtl
protos/meshes/: husky_chassis.mtl  husky_rear_left_wheel.mtl
robocomp/components/husky_control/: CMakeLists.txt  README.md  husky_control.cdsl
robocomp/components/husky_control/etc/: config
robocomp/components/husky_control/src/: CMakeLists.txt  specificworker.py
robocomp/components/triangular_mesh/: CMakeLists.txt  DoxyFile  README.md  triangular_mesh.cdsl  triangular_mesh2.cdsl
robocomp/components/triangular_mesh/etc/: config  config.toml
robocomp/components/triangular_mesh/src/: CMakeLists.txt  mainUI.ui  specificworker.cpp  specificworker.cpp.new  specificworker.h
robocomp/components/triangular_mesh/src/navmap/core/: Geometry.hpp  NavMap.cpp  NavMap.hpp
worlds/: .agriworld_test1.wbproj  .main.wbproj  agriworld_test1.wbt
